Add scrollwheel scrolling
Drag to change volume

remove ctrl+scroll

comment out print statements

Not supporting Java 1.7 anymore

Update versioning. It's going to be a lot of edits from here on out...

Remove unused imports

Roll version to v1.1.0 because of multiple new feature additions

allow only one of staffinstrumenteventhandler or rubberbandeventhandler at a time, clean up other stuff

copy and paste volumes, rename a bunch of stuff, clarify comments

toggle note and volume selection, alt+n for notes and alt+v for volumes

Fix small bug with filename population

Fix small bug with filename population (arranger side)

Refactor/rename StaffInstrumentEventHandler_Hack into
StaffInstrumentEventHandler. Remove old references to previous event
handler, since now the global handler does everything.

Fix bug with save / load directories not being harmonized. Now has a
program-wide variable for "last-accessed" directory.

Add scrollwheel scrolling

Change Controls.java back

Drag to change volume

add undo redo for volume change

Add scrollwheel scrolling

Drag to change volume

remove ctrl+scroll

add undo redo for notes

add undo redo for clipboard functions

reset undoredo when loading new file, undoredo as you place/remove notes

print undo redo to console

organize commands into individual objects

Use individual commands

add multiplytempocommand

Fix undo to undo commands in correct order

rename staffinstrumenteventhandler_hack to prepare for merge

Fix errors after merge, undoredo for pasting volumes

get that copy paste button made a little more nicely, and have it not appear in the arranger tab

fix up clipboard sprites. thanks to seymour schlong and SupraTheHedgehog

add more descriptive undo redo log, rename last clipsel, reset undo redo after switching songs in arranger

update readme with new tasks

--- a/MainWindow.fxml
+++ b/MainWindow.fxml
@@ -874,7 +874,7 @@
                             </HBox>
                             <HBox id="" prefHeight="100.0" prefWidth="300.0">
                               <children>
-                                                <VBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                                                <VBox alignment="CENTER_LEFT" prefHeight="88.0" prefWidth="128.0">
                                                    <children>
                                                       <ImageView id="" fx:id="addButton" fitHeight="14.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                                          <image>
@@ -901,7 +901,24 @@
                                                       <Insets left="4.0" />
                                                    </padding>
                                                 </VBox>
-                                <VBox id="VBox" alignment="CENTER">
+                                                <VBox alignment="CENTER" prefHeight="88.0" prefWidth="128.0">
+                                                   <children>
+                                                      <ImageView fx:id="clipboardLabel" fitHeight="14.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                                                         <image>
+                                                            <Image url="@sprites/CLIPBOARD_LABEL.png" />
+                                                         </image>
+                                                      </ImageView>
+                                                      <ImageView fx:id="clipboardButton" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                                                         <image>
+                                                            <Image url="@sprites/CLIPBOARD_RELEASED.png" />
+                                                         </image>
+                                                      </ImageView>
+                                                   </children>
+                                                   <padding>
+                                                      <Insets left="4.0" />
+                                                   </padding>
+                                                </VBox>
+                                <VBox id="VBox" alignment="CENTER" prefHeight="88.0" prefWidth="104.0">
                                   <children>
                                                       <ImageView id="" fitHeight="14.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                                          <image>
