--- a/MainWindow.fxml
+++ b/MainWindow.fxml
@@ -1041,7 +1041,7 @@
                 </ImageView>
                 <StackPane id="StackPane">
                   <children>
-                    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#efefef" height="32.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" width="96.0" />
+                    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#efefef" height="32.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" width="60.0" />
                     <Text id="Tempo" fx:id="modeText" font="$x2" strokeType="OUTSIDE" strokeWidth="0.0" />
                   </children>
                 </StackPane>
@@ -1144,6 +1144,21 @@
                     <Image preserveRatio="false" smooth="false" url="@sprites/BOO_SM.PNG" />
                   </image>
                 </ImageView>
+                        <ImageView fitHeight="28.0" fitWidth="26.0" layoutX="514.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@sprites/LUIGI_SM.PNG" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="28.0" fitWidth="26.0" layoutX="542.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@sprites/PEACH_SM.PNG" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="28.0" fitWidth="26.0" layoutX="570.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@sprites/FEATHER_SM.PNG" />
+                           </image>
+                        </ImageView>
               </children>
             </HBox>
             <StackPane layoutX="6.0" layoutY="14.0" prefHeight="38.0" prefWidth="52.0">
