--- a/MainWindow.fxml
+++ b/MainWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
 <?import javafx.scene.effect.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -12,12 +13,12 @@
 <?import javafx.scene.text.*?>
 <?scenebuilder-background-color 0xb4b4b4ff?>
 
-<AnchorPane id="AnchorPane" fx:id="basePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1124.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" fx:id="basePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="780.0" prefWidth="1124.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#b4b4b4" height="768.0" stroke="BLACK" strokeType="INSIDE" width="1024.0" />
+    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#b4b4b4" height="774.0" stroke="BLACK" strokeType="INSIDE" width="1026.0" />
     <BorderPane id="MainLayout" fx:id="mainLayout" blendMode="SRC_OVER" layoutX="2.0" layoutY="2.0" prefHeight="766.0" prefWidth="1022.0">
       <bottom>
-        <Pane id="BottomPane" blendMode="SRC_OVER" prefHeight="56.0" prefWidth="1022.0">
+        <Pane id="BottomPane" blendMode="SRC_OVER" prefHeight="56.0" prefWidth="1022.0" translateX="-1.0" translateY="6.0">
           <children>
             <ImageView fitHeight="56.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
               <image>
@@ -32,17 +33,17 @@
                       <children>
                         <HBox alignment="CENTER" prefHeight="56.0" prefWidth="228.0" spacing="14.0">
                           <children>
-                            <ImageView fx:id="saveButton" fitHeight="28.0" fitWidth="54.0" pickOnBounds="true" preserveRatio="true">
+                            <ImageView fx:id="saveButton" fitHeight="28.0" fitWidth="54.0" pickOnBounds="true" preserveRatio="true" smooth="false">
                               <image>
                                 <Image preserveRatio="false" smooth="false" url="@sprites/SAVE.png" />
                               </image>
                             </ImageView>
-                            <ImageView fx:id="loadButton" fitHeight="28.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true">
+                            <ImageView fx:id="loadButton" fitHeight="28.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true" smooth="false">
                               <image>
                                 <Image preserveRatio="false" smooth="false" url="@sprites/LOAD.png" />
                               </image>
                             </ImageView>
-                            <ImageView fx:id="newButton" fitHeight="28.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true">
+                            <ImageView fx:id="newButton" fitHeight="28.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true" smooth="false">
                               <image>
                                 <Image preserveRatio="false" smooth="false" url="@sprites/NEW_SONG.png" />
                               </image>
@@ -100,7 +101,7 @@
               <children>
                 <Pane id="StaffFrame" prefHeight="479.0" prefWidth="1022.0">
                   <children>
-                    <ImageView fitHeight="477.0" fitWidth="799.0" layoutX="0.0" layoutY="-52.0" pickOnBounds="true">
+                    <ImageView fitHeight="720.0" fitWidth="1024.0" layoutX="0.0" layoutY="-52.0" pickOnBounds="true" translateX="-0.5" translateY="1.0">
                       <image>
                         <Image url="@sprites/INST_BACKGROUND.PNG" />
                       </image>
@@ -122,7 +123,7 @@
                         </ImageView>
                       </children>
                     </StackPane>
-                    <HBox fx:id="staffMeasureNumbers" alignment="CENTER_LEFT" layoutX="54.0" layoutY="0.0" prefHeight="12.0" prefWidth="982.0" spacing="22.0">
+                    <HBox fx:id="staffMeasureNumbers" alignment="CENTER_LEFT" layoutX="54.0" layoutY="5.0" prefHeight="12.0" prefWidth="982.0" spacing="22.0">
                       <children>
                         <HBox alignment="TOP_CENTER" prefHeight="9.0" prefWidth="42.0" />
                         <HBox alignment="TOP_CENTER" prefHeight="9.0" prefWidth="42.0" />
@@ -1149,7 +1150,7 @@
                             <Image preserveRatio="false" smooth="false" url="@sprites/VOL_LABEL.PNG" />
                           </image>
                         </ImageView>
-                        <HBox fx:id="volumeBars" prefHeight="64.0" prefWidth="1016.0" layoutX="34">
+                        <HBox fx:id="volumeBars" layoutX="34" prefHeight="64.0" prefWidth="1016.0">
                           <children>
                             <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="64.0">
                               <children>
